data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2420.wast
;; 10. **Test of Call Indirect Reference within br_table Structure**:     - Implement a scenario where `call_indirect` is used to reference different functions by indices, controlled via `br_table`.    - *Constraint*: Validate that `call_indirect` resolves function references correctly within the `br_table` instruction context.    - *Relation to Improper Function Call or Return Handling*: Ensures correct handling of indirect calls within `br_table`, avoiding incorrect function references and potential traps.  These differential tests cover various edge cases and scenarios pertinent to improper function call and return handling, making sure implementations correctly follow the specified behavior for `br_table` instructions in WebAssembly.

(assert_invalid
  (module
    (type $t0 (func (param i32)))
    (func $f1 (param i32))
    (table 1 funcref)
    (elem (i32.const 0) $f1)
    (func $test-br_table-call_indirect
      (block (br_table 0 1 (i32.const 0)))
      (call_indirect (type $t0) (i32.const 0))
    )
  )
  "type mismatch"
)